# django-docker-postgresql-template

./: .dockerignore  .flake8  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.sh  local.env  prod.env  pyproject.toml  stage.env  test.env
apps/auth_token/: apps.py  urls.py  views.py
apps/users/: admin.py  models.py  serializers.py  tests.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users_auth/: apps.py  urls.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  prod.py  test.py
core/: managers.py  mixins.py  models.py
templates/: docs.html
tests/: conftest.py
tests/test_apis/: test_users.py
